tree-sitter-sleep-notes/corpus/basic.txt
============
Simple example
============

Oct 9-10
Bedtime: 8pm
Slept 8-11:45
Slept 12:10-2:15
Slept 2:25-4:10
Slept 4:25-6:30
Slept 7:05–8:05am
Wake up: 8:05 (~11 hours slept)
1st nap: 9:10-10:50
2nd nap: 12:45-1:25
3rd nap: (on/off since 2:50) 3:05-4:05
Bedtime: 6:35

---

(source_file
  (sleep_note
    (date_range
        (short_month)
        (date_day)
        (range_specifier)
        (date_day))
    (entry_list
        (bedtime_entry
            (time
                (time_hour)
                (pm_specifier)))
        (slept_entry
            (time_range
                (time
                    (time_hour))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (slept_entry
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (slept_entry
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (slept_entry
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (slept_entry
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute)
                    (am_specifier))))
        (wakeup_entry
            (time
                (time_hour)
                (time_separator)
                (time_minute))
                (comment))
        (nap_entry
            (ordinal)
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (nap_entry
            (ordinal)
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (nap_entry
            (ordinal)
            (comment)
            (time_range
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))
                (range_specifier)
                (time
                    (time_hour)
                    (time_separator)
                    (time_minute))))
        (bedtime_entry
            (time
                (time_hour)
                (time_separator)
                (time_minute))))))